# ircbot

./: .gitignore  CMakeLists.txt  README.md  bot.cc  bot.h  commands.cc  commands.h  main.cc  strings.cc  strings.h
